# cpp-lab-7-8

./: CMakeCache.txt  CMakeLists.txt  Customer.cpp  Customer.h  Daily_report.txt  MaintenanceRecord.cpp  MaintenanceRecord.h  Makefile  Online_record.txt  Vehicle.cpp  Vehicle.h  cmake_install.cmake  cpp-lab-7-8  main  main.cpp
